# trevor

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  Tiltfile  alembic.ini  prek.toml  pyproject.toml  sample.env  spec  zensical.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml
.opencode/: opencode.jsonc
.playwright-mcp/: page-2026-04-26T16-15-43-334Z.yml  page-2026-04-26T16-15-49-407Z.yml  page-2026-04-26T18-52-18-352Z.yml  page-2026-04-26T18-53-30-552Z.yml  page-2026-04-26T18-54-37-796Z.yml  page-2026-04-26T18-54-42-048Z.yml  page-2026-04-26T18-54-55-276Z.yml
alembic/: env.py
alembic/versions/: 080e732ad01d_add_airlock_request_tables.py  1e48bf626add_add_release_records_table.py  3a979d6afefc_add_reviews_table.py  555a167047a2_align_user_and_project_with_spec.py  (+4 more)
deploy/dev/: keycloak.yaml  (+6 more)
docs/: api.md  architecture.md  index.md  runbook.md  security-checklist.md  security.md  ui.md
scripts/: dev-setup.sh  dev-teardown.sh  seed-dev-db.py
spec/: 0001-frontend-framework.md  0002-storage-architecture.md  0005-agentic-checking.md  0007-authentication.md  0008-kubernetes-deployment.md  0009-notification-abstraction.md  0010-two-person-review.md  0012-cr8tor-crd-sync.md  CONSTRAINTS.md  DOMAIN_MODEL.md  ITERATION_PLAN.md  README.md  iteration-7-spec.md
tests/: conftest.py  test_admin.py  test_auth_flow.py  test_crd_sync.py  test_cron_jobs.py  test_hardening.py  test_health.py  test_ingress.py  test_memberships.py  test_notifications.py  test_preview_service.py  test_projects.py  test_releases.py  test_requests.py  test_reviews.py  test_rules.py  test_smtp_backend.py  test_sse.py  test_ui.py  test_ui_iter20.py  test_users.py
(+177 files in other folders)
