[project]
name = "trevor"
version = "0.1.0"
description = "Not a tree surgeon. Airlock manager for KARECTL."
readme = "README.md"
authors = [{ name = "vvcb", email = "vvcb.n1@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.125.0",
    "pydantic>=2,<3",
    "sqlmodel>=0.0.38",
    "alembic>=1.13",
    "aiosqlite>=0.22.1",
    "aioboto3>=15.5.0",
    "arq>=0.27.0",
    "python-jose[cryptography]>=3.5.0",
    "rocrate>=0.15.0",
    "mistune>=3.2.0",
    "polars>=1.39.3",
    "pygments>=2.20.0",
    "pydantic-settings>=2.13.1",
    "pydantic-ai>=0.2.0",
    "sse-starlette>=3.3.4",
    "datastar-py>=1.0.0",
]

[project.scripts]
trevor = "trevor:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
    "prek>=0.3.9",
    "httpx>=0.28.1",
    "anyio>=4.13.0",
    "zensical>=0.0.36",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".agents", ".claude", "alembic/versions"]

[tool.ruff.format]
preview=true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "S", "ANN"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ANN"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.prek]
hooks = [
    { id = "ruff-check", name = "ruff lint", entry = "uv run ruff check --fix", types = ["python"], pass_filenames = false },
    { id = "ruff-format", name = "ruff format", entry = "uv run ruff format", types = ["python"], pass_filenames = false },
]
